[gd_scene load_steps=8 format=3 uid="uid://dp3rgqaehb3xu"]

[ext_resource type="Script" uid="uid://eborw7q4b07h" path="res://addons/maaacks_game_template/base/nodes/menus/options_menu/input/input_options_menu.gd" id="1"]
[ext_resource type="Script" uid="uid://1nf36h0gms3q" path="res://addons/maaacks_game_template/base/nodes/utilities/capture_focus.gd" id="2_wft4x"]
[ext_resource type="PackedScene" uid="uid://bxp45814v6ydv" path="res://addons/maaacks_game_template/base/nodes/menus/options_menu/input/input_actions_list.tscn" id="4_lf2nw"]
[ext_resource type="PackedScene" uid="uid://ci6wgl2ngd35n" path="res://addons/maaacks_game_template/base/nodes/menus/options_menu/input/input_actions_tree.tscn" id="5_b2whh"]
[ext_resource type="PackedScene" uid="uid://cwt4p3bufkke5" path="res://addons/maaacks_game_template/base/nodes/windows/confirmation_overlaid_window.tscn" id="7_5j1ya"]
[ext_resource type="PackedScene" uid="uid://6gdbfi0172ji" path="res://addons/maaacks_game_template/base/nodes/windows/overlaid_window.tscn" id="8_jtpjy"]
[ext_resource type="Script" uid="uid://custha7r0uoic" path="res://addons/maaacks_game_template/base/nodes/menus/options_menu/input/key_assignment_window.gd" id="9_pdk84"]

[node name="Controls" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 8
script = ExtResource("1")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("2_wft4x")
search_depth = 5

[node name="InputMappingContainer" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer/InputMappingContainer"]
layout_mode = 2
text = "Actions & Inputs"
horizontal_alignment = 1

[node name="InputActionsList" parent="VBoxContainer/InputMappingContainer" instance=ExtResource("4_lf2nw")]
unique_name_in_owner = true
custom_minimum_size = Vector2(560, 440)
layout_mode = 2

[node name="InputActionsTree" parent="VBoxContainer/InputMappingContainer" instance=ExtResource("5_b2whh")]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(400, 440)
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/InputMappingContainer"]
layout_mode = 2
alignment = 1

[node name="ResetButton" type="Button" parent="VBoxContainer/InputMappingContainer/HBoxContainer"]
layout_mode = 2
text = "Reset"

[node name="KeyDeletionConfirmation" parent="." instance=ExtResource("7_5j1ya")]
visible = false
custom_minimum_size = Vector2(420, 200)
layout_mode = 2
update_content = true
text = "Are you sure you want to remove KEY from ACTION?"
title = "Remove Key"

[node name="ResetConfirmation" parent="." instance=ExtResource("7_5j1ya")]
visible = false
custom_minimum_size = Vector2(420, 200)
layout_mode = 2
update_content = true
text = "Are you sure you want to reset controls back to the defaults?"
title = "Reset to Default"

[node name="OneInputMinimumMessage" parent="." instance=ExtResource("8_jtpjy")]
visible = false
custom_minimum_size = Vector2(420, 200)
layout_mode = 2
update_content = true
title = "One Input Minimum"

[node name="AlreadyAssignedMessage" parent="." instance=ExtResource("8_jtpjy")]
visible = false
custom_minimum_size = Vector2(420, 200)
layout_mode = 2
update_content = true
title = "Already Assigned"

[node name="KeyAssignmentWindow" parent="." instance=ExtResource("7_5j1ya")]
visible = false
custom_minimum_size = Vector2(420, 200)
layout_mode = 2
script = ExtResource("9_pdk84")
input_confirmation = 0
update_content = true

[node name="VBoxContainer" type="VBoxContainer" parent="KeyAssignmentWindow/ContentContainer/BoxContainer" index="1"]
layout_mode = 2
size_flags_vertical = 3

[node name="InputLabel" type="Label" parent="KeyAssignmentWindow/ContentContainer/BoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "None"
horizontal_alignment = 1

[node name="InputTextEdit" type="TextEdit" parent="KeyAssignmentWindow/ContentContainer/BoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
placeholder_text = "Listening for input..."
context_menu_enabled = false
shortcut_keys_enabled = false
selecting_enabled = false
deselect_on_focus_loss_enabled = false
drag_and_drop_selection_enabled = false
middle_mouse_paste_enabled = false
caret_move_on_right_click = false

[node name="DescriptionMargin" parent="KeyAssignmentWindow/ContentContainer/BoxContainer" index="2"]
visible = false

[node name="MenuButtons" parent="KeyAssignmentWindow/ContentContainer/BoxContainer/MenuButtonsMargin" index="0"]
null_focus_enabled = false
joypad_enabled = false
mouse_hidden_enabled = false

[node name="CloseButton" parent="KeyAssignmentWindow/ContentContainer/BoxContainer/MenuButtonsMargin/MenuButtons" index="0"]
focus_neighbor_top = NodePath("../../../VBoxContainer/InputTextEdit")

[node name="ConfirmButton" parent="KeyAssignmentWindow/ContentContainer/BoxContainer/MenuButtonsMargin/MenuButtons" index="1"]
focus_neighbor_top = NodePath("../../../VBoxContainer/InputTextEdit")

[node name="DelayTimer" type="Timer" parent="KeyAssignmentWindow"]
unique_name_in_owner = true
wait_time = 0.1
one_shot = true

[connection signal="already_assigned" from="VBoxContainer/InputMappingContainer/InputActionsList" to="." method="_on_input_actions_list_already_assigned"]
[connection signal="button_clicked" from="VBoxContainer/InputMappingContainer/InputActionsList" to="." method="_on_input_actions_list_button_clicked"]
[connection signal="minimum_reached" from="VBoxContainer/InputMappingContainer/InputActionsList" to="." method="_on_input_actions_list_minimum_reached"]
[connection signal="add_button_clicked" from="VBoxContainer/InputMappingContainer/InputActionsTree" to="." method="_on_input_actions_tree_add_button_clicked"]
[connection signal="already_assigned" from="VBoxContainer/InputMappingContainer/InputActionsTree" to="." method="_on_input_actions_tree_already_assigned"]
[connection signal="minimum_reached" from="VBoxContainer/InputMappingContainer/InputActionsTree" to="." method="_on_input_actions_tree_minimum_reached"]
[connection signal="remove_button_clicked" from="VBoxContainer/InputMappingContainer/InputActionsTree" to="." method="_on_input_actions_tree_remove_button_clicked"]
[connection signal="pressed" from="VBoxContainer/InputMappingContainer/HBoxContainer/ResetButton" to="." method="_on_reset_button_pressed"]
[connection signal="confirmed" from="KeyDeletionConfirmation" to="." method="_on_key_deletion_confirmation_confirmed"]
[connection signal="confirmed" from="ResetConfirmation" to="." method="_on_reset_confirmation_confirmed"]
[connection signal="confirmed" from="KeyAssignmentWindow" to="." method="_on_key_assignment_window_confirmed"]
[connection signal="focus_entered" from="KeyAssignmentWindow/ContentContainer/BoxContainer/VBoxContainer/InputTextEdit" to="KeyAssignmentWindow" method="_on_input_text_edit_focus_entered"]
[connection signal="focus_exited" from="KeyAssignmentWindow/ContentContainer/BoxContainer/VBoxContainer/InputTextEdit" to="KeyAssignmentWindow" method="_on_input_text_edit_focus_exited"]
[connection signal="gui_input" from="KeyAssignmentWindow/ContentContainer/BoxContainer/VBoxContainer/InputTextEdit" to="KeyAssignmentWindow" method="_on_input_text_edit_gui_input"]

[editable path="KeyAssignmentWindow"]
